Adding some dazzle

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 </head>
 <body>
   <div class='svg-wrapper'>
-    <svg id='svg'></svg>
+    <svg id='svg' version='1.1' xmlns="http://www.w3.org/2000/svg"></svg>
   </div>
+  <div class='save-link' id='save'></div>
   
   <script src="assets/vendor/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="assets/vendor/dat.gui.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="assets/build/bundle.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
