--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <title>Razzle Dazzle</title>
   
-  <link rel="stylesheet" href="assets/base.css" type="text/css" charset="utf-8">
+  <link rel="stylesheet" href="assets/base.css?v=1" type="text/css" charset="utf-8">
   
 </head>
 <body>
@@ -17,6 +17,6 @@
   
   <script src="assets/vendor/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="assets/vendor/dat.gui.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="assets/build/bundle.js" type="text/javascript" charset="utf-8"></script>
+  <script src="assets/build/bundle.js?v=1" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
